@@ -11,6 +11,11 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-11
+2014-08-19 Mikhail S. Dubrovin
+- in test/ex_geometry_access.cpp and GeometryAccess.py change test files location after summer shutdown
+- in SegGeometry.py update comments
+
 Tag: V00-02-10
 2014-08-13 Mikhail S. Dubrovin
 - in PSCalib/ex_geometry_access add test of methods get_pixel_coord_indexes(...), img_from_pixel_arrays(...)
@@ -19,7 +24,6 @@ Tag: V00-02-10
 - in GeometryAccess.py add methods get_pixel_coord_indexes(...), img_from_pixel_arrays(...)
 2014-08-11 Mikhail S. Dubrovin
 - in GeometryObject and GeometryAccess add methods for get_pixel_scale_size(...) and complete implementation for pixel area
-
 	
 Tag: V00-02-09
 2014-08-08 Mikhail S. Dubrovin
